--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioEstatus.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioEstatus.cshtml
@@ -13,6 +13,8 @@
     string[] plantaArray = (string[])ViewBag.PlantaArray;
 
     ViewBag.nav_style = "nav-sm";
+    string comentario = string.Empty;
+
 }
 
 
@@ -272,35 +274,40 @@
                         </div>
 
                         <div class="col-sm-12">
+                            @{ //lee el comentario de la sección
+                                if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_ESTATUS))
+                                {
+                                    comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_ESTATUS).comentario;
+                                }
+                            }
+                            <div class="wf-accordion-group js-accordion-group">
 
-                            <div class="wf-accordion-group js-accordion-group">                               
-                                   
-                                    <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
-                                        <div class="wf-accordion__header js-accordion__header">
-                                            <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-pendiente" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Información de estatus</button></h3>
-                                        </div>
-                                        <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
-                                            <!--Contenido-->
-                                            <div class="col-sm-12">
-                                                <div class="col-md-5    col-sm-5">
-                                                    <div id="estatus_combinaciones_hot" class="hot"></div>
-                                                </div>
-                                                <div class="col-md-4 col-sm-4 ">
-                                                    <div id="estatus_planta_hot" class="hot"></div>
-                                                </div>
-                                                <div class="col-md-3 col-sm-3 ">
-                                                    <div id="estatus_ventas_hot" class="hot"></div>
-                                                </div>
-
-                                            </div>
-                                            <span style="color:#FFFF">.</span>  <br />
-                                            <span style="color:#FFFF">.</span>
-
-                                        </div>
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-pendiente" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Información de estatus</button></h3>
                                     </div>
-                                
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Contenido-->
+                                        <div class="col-sm-12">
+                                            <div class="col-md-5    col-sm-5">
+                                                <div id="estatus_combinaciones_hot" class="hot"></div>
+                                            </div>
+                                            <div class="col-md-4 col-sm-4 ">
+                                                <div id="estatus_planta_hot" class="hot"></div>
+                                            </div>
+                                            <div class="col-md-3 col-sm-3 ">
+                                                <div id="estatus_ventas_hot" class="hot"></div>
+                                            </div>
+
+                                        </div>
+                                        <span style="color:#FFFF">.</span>  <br />
+                                        <span style="color:#FFFF">.</span>
+
+                                    </div>
+                                </div>
+
                             </div>
-                        </div>                                     
+                        </div>
 
                         <div class="col-sm-12">
                             <div class="ln_solid"></div>
@@ -337,6 +344,25 @@
                                 }
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -419,7 +445,7 @@
             $.unblockUI();
         });
 
-        
+
         function inicializaHandsontable() {
             const container = document.querySelector('#example');
 
@@ -504,7 +530,7 @@
                              if ((value == null || value == '') || !estatusPlantaArray.includes(value)) {
                                  callback(false);
                              }
-                             else {                      
+                             else {
                                  callback(true);
                              }
                          }
@@ -532,7 +558,7 @@
                                          toastMixin.fire({ title: 'La combinación no es válida.', icon: 'warning' });
                                          callback(false);
                                          break;
-                                 }                                 
+                                 }
                              }
                          }
                      },
@@ -575,7 +601,7 @@
                 rowHeaders: true,
                 autoColumnSize: true,
                 //width: '100%',
-                height: '400px',
+                height: '300px',
                 manualColumnResize: true,
                 licenseKey: 'non-commercial-and-evaluation',
                 contextMenu: [ 'remove_row', '---------', 'undo', 'redo', '---------', 'cut', 'copy'],
@@ -608,11 +634,38 @@
 
         }
 
+          function GuardaComentario() {
+
+              let comentario = $('#comentario').val();
+              //llamada ajax para obtener el detalle del item  seleccionado
+              $.ajax({
+                  type: 'POST',
+                  url: '/SCDM_solicitud/GuardaComentario',
+                  data: { id_solicitud: @Model.id, id_seccion: @((int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_ESTATUS), comentario: comentario },
+                  success: function (data) {
+                      console.log(data);
+                      try {
+                          console.log(data[0].resultado);
+                          //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                      }
+                      catch (error) {
+                          Swal.fire({
+                              icon: 'error',
+                              title: 'Error',
+                              text: 'Ocurrió un error al guardar el comentario: ' + error,
+                              confirmButtonText: 'Aceptar',
+                          })
+                      }
+                  },
+                  async: false
+              });
+          }
 
         function EnviaFormulario(salir) {
             hot.validateCells((valid) => {
                 if (valid) {
                     // ... code for validated cells
+                    GuardaComentario();
                     $.ajax({
                         type: "POST",
                         dataType: "json",
