--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioIngenieria.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCambioIngenieria.cshtml
@@ -28,6 +28,8 @@
     string[] tipoMetalArray = (string[])ViewBag.TipoMetalArray;
 
     ViewBag.nav_style = "nav-sm";
+    string comentario = string.Empty;
+
 }
 
 
@@ -310,7 +312,9 @@
                             <div class="wf-accordion-group js-accordion-group">
                                 @if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_INGENIERIA))
                                 {
-                                    //3 = formato CINTA
+                                    //10 = formato CAMBIO_INGENIERIA
+                                    comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_INGENIERIA).comentario;
+
                                     <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
                                         <div class="wf-accordion__header js-accordion__header">
                                             <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Cambio de Ingeniería</button></h3>
@@ -333,6 +337,25 @@
                                 }
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -1003,7 +1026,7 @@
                     case GetColFromName("Grado/Calidad"): //grado
                     case GetColFromName("Peso del recubrimiento"): //coating weight
 
-                        if ((changes[0][2] != '' && typeof changes[0][2] !== 'undefined' && changes[0][2] != null) && changes[0][2] != changes[0][3]) //si no era vacio 
+                        if ((changes[0][2] != '' && typeof changes[0][2] !== 'undefined' && changes[0][2] != null) && changes[0][2] != changes[0][3]) //si no era vacio
 
                             setTimeout(() => {
                                 Swal.fire({
@@ -1059,12 +1082,38 @@
             }
         }
 
+        function GuardaComentario() {
+                let comentario = $('#comentario').val();
+                //llamada ajax para obtener el detalle del item  seleccionado
+                $.ajax({
+                    type: 'POST',
+                    url: '/SCDM_solicitud/GuardaComentario',
+                    data: { id_solicitud: @Model.id, id_seccion: @((int)Bitacoras.Util.SCDMSeccionesSolicitud.CAMBIO_INGENIERIA), comentario: comentario },
+                    success: function (data) {
+                        console.log(data);
+                        try {
+                            console.log(data[0].resultado);
+                            //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                        }
+                        catch (error) {
+                            Swal.fire({
+                                icon: 'error',
+                                title: 'Error',
+                                text: 'Ocurrió un error al guardar el comentario: ' + error,
+                                confirmButtonText: 'Aceptar',
+                            })
+                        }
+                    },
+                    async: false
+                });
+            }
+
         function EnviaFormulario(salir) {
                hot.validateCells((valid) => {
                    if (valid) {
                        // ... code for validated cells
 
-
+                       GuardaComentario();
                        Swal.fire({
                            title: "<span style='color: #DD0000 '>¡Importante!</span>",
                            html: `
@@ -1502,7 +1551,7 @@
                                hot.setDataAtCell(row, GetColFromName("Núm. parte del cliente"), data[0].numero_parte_cliente);
                                hot.setDataAtCell(row, GetColFromName("MSA (Honda)"), data[0].msa);
                                hot.setDataAtCell(row, GetColFromName("Diametro Exterior"), data[0].diametro_exterior);
-                               hot.setDataAtCell(row, GetColFromName("Diametro Interior"), data[0].diametro_interior);    
+                               hot.setDataAtCell(row, GetColFromName("Diametro Interior"), data[0].diametro_interior);
                                hot.setDataAtCell(row, GetColFromName("Tipo Metal"), data[0].tipo_metal);
                                hot.setDataAtCell(row, GetColFromName("Tipo de Material"), data[0].tipo_material);
                                hot.setDataAtCell(row, GetColFromName("Selling Type (Budget)"), data[0].type_selling);
