--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCopperAndBrass.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCopperAndBrass.cshtml
@@ -26,8 +26,11 @@
     string[] terminosPagoArray = (string[])ViewBag.terminosPagoArray;
     string[] gradoCalidadArray = (string[])ViewBag.GradoCalidadArray;
 
-
     ViewBag.nav_style = "nav-sm";
+
+    string comentario = string.Empty;
+
+
 }
 
 
@@ -267,7 +270,12 @@
                             </div>
                         </div>
                         <div class="col-sm-12">
-
+                            @{ //lee el comentario de la sección
+                                if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.C_AND_B))
+                                {
+                                    comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.C_AND_B).comentario;
+                                }
+                            }
                             <div class="wf-accordion-group js-accordion-group">
 
                                 <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
@@ -291,6 +299,25 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -954,12 +981,39 @@
                     hot.setDataAtCell(i, GetColFromName("Número de Material"), "CopperAndBrass" + (i + 1));
             }
         }
+        function GuardaComentario() {
+
+            let comentario = $('#comentario').val();
+            //llamada ajax para obtener el detalle del item  seleccionado
+            $.ajax({
+                type: 'POST',
+                url: '/SCDM_solicitud/GuardaComentario',
+                data: { id_solicitud: @Model.id, id_seccion: @((int)Bitacoras.Util.SCDMSeccionesSolicitud.C_AND_B), comentario: comentario },
+                success: function (data) {
+                    console.log(data);
+                    try {
+                        console.log(data[0].resultado);
+                        //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                    }
+                    catch (error) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'Ocurrió un error al guardar el comentario: ' + error,
+                            confirmButtonText: 'Aceptar',
+                        })
+                    }
+                },
+                async: false
+            });
+        }
 
         function EnviaFormulario(salir) {
             ValidaNumeroMaterial();
 
             hot.validateCells((valid) => {
                 if (valid) {
+                    GuardaComentario();
                     // ... code for validated cells
                     $.ajax({
                         type: "POST",
