--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCreacionReferencia.cshtml
@@ -27,8 +27,9 @@
     string[] diametroInteriorArray = (string[])ViewBag.DiametroInteriorArray;
     string[] tipoMetalArray = (string[])ViewBag.TipoMetalArray;
 
-
     ViewBag.nav_style = "nav-sm";
+    string comentario = string.Empty;
+
 }
 
 
@@ -313,7 +314,9 @@
                             <div class="wf-accordion-group js-accordion-group">
                                 @if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CREACION_REFERENCIA))
                                 {
-                                    //3 = formato CINTA
+                                    //3 = formato CREACION_REFERENCIA
+                                    comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CREACION_REFERENCIA).comentario;
+
                                     <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
                                         <div class="wf-accordion__header js-accordion__header">
                                             <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Creaci&oacute;n con Referencia</button></h3>
@@ -336,6 +339,25 @@
                                 }
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -1010,17 +1032,17 @@
                     case GetColFromName("Grado/Calidad"): //grado
                     case GetColFromName("Peso del recubrimiento"): //coating weight
 
-                        if ((changes[0][2] != '' && typeof changes[0][2] !== 'undefined' && changes[0][2] != null) && changes[0][2] != changes[0][3]) //si no era vacio 
-                            
+                        if ((changes[0][2] != '' && typeof changes[0][2] !== 'undefined' && changes[0][2] != null) && changes[0][2] != changes[0][3]) //si no era vacio
+
                             setTimeout(() => {
-                              
+
                                 Swal.fire({
                                     title: "¡Aviso!",
                                     text: "Recuerda cambiar la descripción del material, de ser necesario.",
                                     icon: "warning"
                                 });
                             }, 700);
-                           
+
                     break;
                 }
 
@@ -1067,9 +1089,36 @@
             }
         }
 
+        function GuardaComentario() {
+
+              let comentario = $('#comentario').val();
+              //llamada ajax para obtener el detalle del item  seleccionado
+              $.ajax({
+                  type: 'POST',
+                  url: '/SCDM_solicitud/GuardaComentario',
+                  data: { id_solicitud: @Model.id, id_seccion: @((int)Bitacoras.Util.SCDMSeccionesSolicitud.CREACION_REFERENCIA), comentario: comentario },
+                  success: function (data) {
+                      console.log(data);
+                      try {
+                          console.log(data[0].resultado);
+                          //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                      }
+                      catch (error) {
+                          Swal.fire({
+                              icon: 'error',
+                              title: 'Error',
+                              text: 'Ocurrió un error al guardar el comentario: ' + error,
+                              confirmButtonText: 'Aceptar',
+                          })
+                      }
+                  },
+                  async: false
+              });
+          }
         function EnviaFormulario(salir) {
             hot.validateCells((valid) => {
                 if (valid) {
+                    GuardaComentario();
                     // ... code for validated cells
                     Swal.fire({
                         title: "<span style='color: #DD0000 '>¡Importante!</span>",
@@ -1585,7 +1634,7 @@
             let ancho = hot.getDataAtCell(row, GetColFromName("Ancho (mm)"));
             let avance = hot.getDataAtCell(row, GetColFromName("Avance (mm)"));
 
-                 
+
             //obtener el simbolo X o x
             let charx = "x";
             let charX = "X";
@@ -1604,18 +1653,18 @@
             if (index_X < index_x)
                 charResult = charX;
 
-         
+
 
             let codingRegex = /[(?<=^| )\d+(\.\d+)?(?=$| )]{1,9}[X|x][(?<=^| )\d+(\.\d+)?(?=$| )]{1,9}[X|x]*[(?<=^| )\d+(\.\d+)?(?=$| )]*/;
             let result = text.match(codingRegex);
 
-       
+
             if (result != null) {
                 let parteDimensiones = result[0].trim();
-               
+
                 //divide en partes
                 const dimensionesArray = parteDimensiones.split(charResult);
-                               
+
 
                 //identifica la dimension y susutituye
                 if (dimensionesArray.length >= 1 && Number(espesor) != Number(dimensionesArray[0]))
@@ -1638,7 +1687,7 @@
 
         function cambioDescripcion(row) {
 
-        
+
             let tipoMaterial = hot.getDataAtCell(row, GetColFromName("Tipo de Material"));
 
             let espesor = hot.getDataAtCell(row, GetColFromName("Espesor (mm)"));
