--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditPlatinas.cshtml
@@ -4,17 +4,21 @@
     int tipoPlatina = (int)ViewBag.TipoPlatina;
 
     string tipoTexto = string.Empty;
+    int id_seccion = 0;
 
     switch (tipoPlatina)
     {
         case Bitacoras.Util.SCDM_solicitud_rel_item_material_tipo.PLATINA:
             tipoTexto = "Platina";
+            id_seccion = (int)Bitacoras.Util.SCDMSeccionesSolicitud.PLATINA;
             break;
         case Bitacoras.Util.SCDM_solicitud_rel_item_material_tipo.SHEARING:
             tipoTexto = "Shearing";
+            id_seccion = (int)Bitacoras.Util.SCDMSeccionesSolicitud.SHEARING;
             break;
         case Bitacoras.Util.SCDM_solicitud_rel_item_material_tipo.PLATINA_SOLDADA:
             tipoTexto = "Platina Soldada";
+            id_seccion = (int)Bitacoras.Util.SCDMSeccionesSolicitud.PLATINA_SOLDADA;
             break;
     }
 
@@ -46,14 +50,14 @@
     string[] formaArray = (string[])ViewBag.FormaArray;
     string[] gradoCalidadArray = (string[])ViewBag.GradoCalidadArray;
 
-
+    string comentario = string.Empty;
 
     ViewBag.nav_style = "nav-sm";
 }
 
 
 @section estilos
-            {
+{
     <!-- Select2 -->
     <link href="@Url.Content("~/Content/vendors/select2/css/select2.css")" rel="stylesheet">
     <link href="@Url.Content("~/Content/vendors/select2-bootstrap4-theme/select2-bootstrap4.min.css")" rel="stylesheet">
@@ -291,7 +295,12 @@
 
                             <div class="wf-accordion-group js-accordion-group">
 
-
+                                @{ //lee el comentario de la sección
+                                    if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == id_seccion))
+                                    {
+                                        comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == id_seccion).comentario;
+                                    }
+                                }
                                 <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
                                     <div class="wf-accordion__header js-accordion__header">
                                         <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">@tipoTexto</button></h3>
@@ -313,6 +322,25 @@
                                 </div>
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -1533,9 +1561,37 @@
              }
         }
 
+        function GuardaComentario() {
+
+            let comentario = $('#comentario').val();
+            //llamada ajax para obtener el detalle del item  seleccionado
+            $.ajax({
+                type: 'POST',
+                url: '/SCDM_solicitud/GuardaComentario',
+                data: { id_solicitud: @Model.id, id_seccion: @(id_seccion), comentario: comentario },
+                success: function (data) {
+                    console.log(data);
+                    try {
+                        console.log(data[0].resultado);
+                        //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                    }
+                    catch (error) {
+                        Swal.fire({
+                            icon: 'error',
+                            title: 'Error',
+                            text: 'Ocurrió un error al guardar el comentario: ' + error,
+                            confirmButtonText: 'Aceptar',
+                        })
+                    }
+                },
+                async: false
+            });
+        }
+
         function EnviaFormulario(salir) {
             hot.validateCells((valid) => {
                 if (valid) {
+                    GuardaComentario();
                     // ... code for validated cells
                     $.ajax({
                         type: "POST",
