--- a/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
+++ b/CódigoFuente/BitacorasProduccion/Views/SCDM_solicitud/EditCintas.cshtml
@@ -28,8 +28,10 @@
     string[] diametroInteriorArray = (string[])ViewBag.DiametroInteriorArray;
     string[] gradoCalidadArray = (string[])ViewBag.GradoCalidadArray;
 
-
     ViewBag.nav_style = "nav-sm";
+
+    string comentario = string.Empty;
+
 }
 
 
@@ -273,7 +275,9 @@
                             <div class="wf-accordion-group js-accordion-group">
                                 @if (Model.SCDM_rel_solicitud_secciones_activas.Any(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CINTA))
                                 {
-                                    //3 = formato CINTA
+                                    comentario = Model.SCDM_rel_solicitud_secciones_activas.FirstOrDefault(x => x.id_seccion == (int)Bitacoras.Util.SCDMSeccionesSolicitud.CINTA).comentario;
+
+                                    //4 = formato CINTA
                                     <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
                                         <div class="wf-accordion__header js-accordion__header">
                                             <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Cintas</button></h3>
@@ -296,6 +300,26 @@
                                 }
                             </div>
                         </div>
+                        <!-- Inicio Comentario -->
+                        <div class="col-sm-12">
+                            <div class="wf-accordion-group js-accordion-group">
+                                <div class="wf-accordion js-accordion" data-wf-accordion-expanded="">
+                                    <div class="wf-accordion__header js-accordion__header">
+                                        <h3><button class="wf-accordion__trigger js-accordion__trigger fondo-completado" aria-expanded="true" aria-controls="accordion-1__panel-0" id="accordion-1__header-0">Comentario Adicional</button></h3>
+                                    </div>
+                                    <div class="wf-accordion__panel js-accordion__panel " aria-hidden="false" id="accordion-1__panel-0" aria-labelledby="accordion-1__header-0">
+                                        <!--Comentario-->
+                                        <div class="form-group row">
+                                            <div class="col-md-12 col-sm-12 ">
+                                                <textarea id="comentario" name="comentario" class="form-control" rows="4" autocomplete="off" placeholder="Ingresa un comentario adicional..." maxlength="255">@Html.DisplayFor(model => comentario)</textarea>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <!-- Fin Comentario -->
+
                         <div class="col-md-12">
                             <div class="ln_solid"></div>
                             <button type="button" id="btn-submit-salir" class="btn btn-info btn-lg float-lg-right"><i class="fa-solid fa-save"></i>  Guardar y salir</button>
@@ -341,7 +365,7 @@
             'Espesor (mm)', 'Tolerancia espesor negativa (mm)', 'Tolerancia espesor positiva (mm)', 'Ancho Rollo(mm)', 'Ancho entrega Cinta(mm)', 'Tolerancia ancho negativa (mm)',
             'Tolerancia ancho positiva (mm)', 'Diametro interior entrada (mm)', 'Diametro interior salida (mm)', 'Diametro ext. cinta saliente Max (mm)', 'Peso Max. entrega cinta (KG)', 'Peso del recubrimiento', 'Parte Int/Ext', 'Posición del Rollo para embarque',
             'Programa IHS 1', 'Programa IHS 2', 'Programa IHS 3', 'Programa IHS 4', 'Programa IHS 5', 'Modelo de negocio', 'Procesadores Ext.', 'Número procesador Ext.', 'Núm. antigüo material',
-            'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez', 'Req. conciliación Puntas y colas', 'Scrap permitido (%)', 
+            'Planicidad (mm)', 'MSA (Honda)', 'Fecha validez', 'Req. conciliación Puntas y colas', 'Scrap permitido (%)',
         ];
 
         var toastMixin = Swal.mixin({
@@ -879,7 +903,7 @@
                                 callback(true);
                             }
                         }
-                    }, 
+                    },
                     { //modelo Negocio
                         type: 'autocomplete', source: modeloNegocioArray, strict: false,
                         validator: function (value, callback) {
@@ -978,7 +1002,7 @@
 
 
                             if (tipoVenta == "Reaplicación" || tipoVenta == "Venta Spot" || tipoVenta == "Factory Assist") {
-                                //  si fecha valida       
+                                //  si fecha valida
                                 if (fechaValida) {
                                     if (!fechaPasado) {
                                         callback(true)
@@ -1021,7 +1045,7 @@
                         }
                     },
                     { type: 'numeric', renderer: 'porcentaje_render', validator: 'percentageNumbers' }, //Scrap permitido %
-                   
+
 
 
                     //{ data: 'ip', validator: ipValidatorRegexp, allowInvalid: true },
@@ -1073,7 +1097,7 @@
                     100, //fecha validez
                     200, //Req. conciliación puntas y colas
                     120, //scrap permitido
-                   
+
                 ],
                 hiddenColumns: {
                     // specify columns hidden by default
@@ -1103,7 +1127,7 @@
                             case GetColFromName("Material del cliente"): //CM
                                 CambioMaterialCliente(row, newValue);
                                 CambioAluminio(row);
-                                RestableceIMDs(row);    
+                                RestableceIMDs(row);
                                 break;
                             case GetColFromName("Tipo Metal"): //tipo de Metal
                                 cambioPesoMax(row);
@@ -1475,13 +1499,40 @@
                     hot.setDataAtCell(i, GetColFromName("Número Material"), "Cinta" + (i + 1));
             }
         }
+           function GuardaComentario() {
 
+               let comentario = $('#comentario').val();
+               //llamada ajax para obtener el detalle del item  seleccionado
+               $.ajax({
+                   type: 'POST',
+                   url: '/SCDM_solicitud/GuardaComentario',
+                   data: { id_solicitud: @Model.id, id_seccion: @((int)Bitacoras.Util.SCDMSeccionesSolicitud.CINTA), comentario: comentario },
+                   success: function (data) {
+                       console.log(data);
+                       try {
+                           console.log(data[0].resultado);
+                           //hot.setDataAtCell(row, GetColFromName("Tipo Material<br>(componente)"), data[0].tipo_material );
+                       }
+                       catch (error) {
+                           Swal.fire({
+                               icon: 'error',
+                               title: 'Error',
+                               text: 'Ocurrió un error al guardar el comentario: ' + error,
+                               confirmButtonText: 'Aceptar',
+                           })
+                       }
+                   },
+                   async: false
+               });
+           }
         function EnviaFormulario(salir) {
             ValidaNumeroMaterial();
 
             hot.validateCells((valid) => {
                 if (valid) {
                     // ... code for validated cells
+                    GuardaComentario();
+
                     $.ajax({
                         type: "POST",
                         dataType: "json",
@@ -1627,7 +1678,7 @@
                                 toastMixin.fire({ title: 'El ancho no puede ser mayor a 2150 mm', icon: 'warning' });
                                 callback(false)
                             }
-                           
+
                             else {
                                 callback(true);
                             }
@@ -1640,7 +1691,7 @@
                             callback(true);
                         }
                         else {
-                            if (num == 0 && cero) 
+                            if (num == 0 && cero)
                                 toastMixin.fire({ title: 'Ingrese un número válido.', icon: 'warning' });
                             else if (positivo && !negativo && !cero)
                                 toastMixin.fire({ title: 'Sólo se permiten números positivos.', icon: 'warning' });
